--- a/nav.css
+++ b/nav.css
@@ -9,8 +9,8 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    background-color: YELLOW;
+    background-color: YELLOW;
     overflow-x: hidden;
     transition: 0.5s;
   }
@@ -27,7 +27,7 @@ body {
     padding: 8px;
     text-decoration: none;
     font-size: 36px;
-    color: #818181;
+    color: BLACK;
     display: block;
     transition: 0.3s;
   }
