--- a/nav.css
+++ b/nav.css
@@ -12,6 +12,7 @@ body {
     top: 0;
     left: 0;
     background-color: yellow;
+    background-color: yellow;
     
     overflow-x: hidden;
     transition: 0.5s;
